<resources>
    <string name="app_label">Text Messaging</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_search">Search</string>
    <string name="insert_smiley">Insert smiley</string>
    <string name="menu_multi_select_delete">Delete</string>
    <string name="refreshing">Refreshing…</string>
    <string name="multi_media_message">Multimedia message</string>
    <string name="unable_to_delete">Unable to delete message</string>
    <string name="message_count">(%1$d)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="view_picture">View picture</string>
    <string name="play_audio">Play audio</string>
    <string name="play_video">Play video</string>
    <string name="play_slideshow">Play slideshow</string>
    <string name="view_message_details">View message details</string>
    <string name="menu_unprotect">Unprotect message</string>
    <string name="menu_protect">Protect message</string>
    <string name="voice_recognition">Voice input</string>
    <string name="sent_on">Sent: %1$s</string>
    <string name="expire_on">Expires: %1$s</string>
    <string name="kilobyte">%1$d KB</string>
    <string name="callback_number">CB#: %1$s</string>
    <string name="delete_thread">Delete</string>
    <string name="invokecall">Call</string>
    <string name="menu_forward_message">Forward message</string>
    <string name="menu_resend_message">Resend message</string>
    <string name="reject">Reject</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="drm_protected_text">* DRM protected text *</string>
    <string name="insufficient_drm_rights">Insufficient DRM rights detected.</string>
    <string name="copy_message_text">Copy message text</string>
    <string name="copy_to_phone_memory">Copy to phone memory</string>
    <string name="copy_to_phone_successfully">Message copied to phone memory</string>
    <string name="copy_to_phone_failed">Message unable to be copied. Memory is full</string>
    <string name="copy_to_sim_card">Copy to SIM card</string>
    <string name="copy_to_sim_successfully">Message copied to SIM.</string>
    <string name="copy_to_sim_failed">Copying message to SIM card failed.</string>
    <string name="copy_to_sim_failed_too_long">The message is too long to copy.</string>
    <string name="manage_messages_title">Messages on SIM card (%1$d/%2$d)</string>
    <string name="menu_save_picture">Save picture</string>
    <string name="menu_save_audio">Save audio</string>
    <string name="menu_save_video">Save video</string>
    <string name="menu_save_slideshow">Save slideshow</string>
    <string name="menu_share_picture">Share picture</string>
    <string name="menu_share_audio">Share audio</string>
    <string name="menu_share_video">Share video</string>
    <string name="no_messages">No messages.</string>
    <string name="slide_options">Slide options</string>
    <string name="attachment_options">Attachment options</string>
    <string name="search_hint">Search Messaging</string>
    <string name="actionbar_selected_conversations">%1$d selected</string>
    <string name="menu_done">DONE</string>
    <string name="done">Done</string>
    <string name="edit_slide_text">Slide %1$s caption</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="preview_empty_slideshow">Cannot preview empty slideshow. Please add slides.</string>
    <string name="preview_hint">Preview</string>
    <string name="slideshow_attachment_text">Slideshow</string>
    <string name="slide_number">Slide %1$s</string>
    <string name="send_button">Send</string>
    <string name="slideshow_counter">%1$s of %2$s</string>
    <string name="slideshow_attachments">Slideshow attachments</string>
    <string name="saving_attachments_progress">Saving attachments</string>
    <string name="sdcard_missing_error_dialog_title">SD card missing</string>
    <string name="sdcard_unavailable_error_dialog_title">SD card unavailable</string>
    <string name="sdcard_unavailable_error_message">"The SD card is unavailable while the device is in USB Mass Storage mode.

Disconnect from USB Mass Storage mode and try again."</string>
    <string name="not_enough_memory_error_dialog_title">Not enough memory</string>
    <string name="generic_error_dialog_title">Error saving</string>
    <string name="empty_composer">The conversation will appear here.</string>
    <string name="composer_slideshow_hint">Text can not be sent with slideshow attachments.</string>
    <string name="compose_text_enter_hint">Compose message</string>
    <string name="subject_hint">Subject</string>
    <string name="group_secondary_info">%1$d recipients</string>
    <string name="composer_title_new_message">New message</string>
    <string name="add_attachment">Insert...</string>
    <string name="set_priority">Set priority</string>
    <string name="add_subject">Add subject</string>
    <string name="discard_draft">Discard draft</string>
    <string name="modify_recipients">Modify recipients</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="add_recipients">Message must have valid recipients to add or edit attachments.</string>
    <string name="attachment_remove">Remove</string>
    <string name="attachment_edit">Edit</string>
    <string name="image_too_large">Picture too large</string>
    <string name="ask_for_automatically_resize">Automatically resize picture before sending? Animation may be lost!</string>
    <string name="compressing">Compressing…</string>
    <string name="insert_multiple_images_error">Some images could not be added.</string>
    <string name="adding_images">Adding images...</string>
    <string name="unsupported_media_format">Unsupported %1$s format</string>
    <string name="select_different_media">Please select a different %1$s.</string>
    <string name="exceed_message_size_limitation">Message size limit reached</string>
    <string name="unsupported_resolution">Unsupported resolution</string>
    <string name="failed_to_add_media">Sorry, you cannot add this %1$s to your message.</string>
    <string name="failed_to_add_video">Sorry, you cannot add this video to your message. Try a smaller video or compose a new one using Insert New Video.</string>
    <string name="failed_to_send_message">Sorry, you cannot send this message.</string>
    <string name="forward_prefix">"Fwd: "</string>
    <string name="discard_draft_title">Discard draft</string>
    <string name="discard_draft_body">The message and all attachments will be discarded.</string>
    <string name="discard_draft_no_recipients_body">The message and all attachments will be discarded because it has no valid recipients.</string>
    <string name="cannot_send_message_title">Insufficient data</string>
    <string name="cannot_send_message_body">The message must contain valid recipients and content.</string>
    <string name="too_many_recipients">Too many recipients selected. The network limit is %1$d per message. Please select fewer recipients.</string>
    <string name="cut_extra_recipients">The message can be sent to a maximum of %1$d contacts. This message will not be sent to: %2$s.</string>
    <string name="invalid_recipients">A valid address is required to send this message.</string>
    <string name="sending_failed_for">Sending failed for:</string>
    <string name="application_not_found_title">Application not found</string>
    <string name="application_not_found_body">Unable to find application to complete the requested action.</string>
    <string name="cannot_add_slide_anymore">Cannot add more slides.</string>
    <string name="converting_to_mms_message">Converting to MMS message.</string>
    <string name="converting_to_text_message">Converting to SMS message.</string>
    <string name="saving_callback_number_unsuccessful">Saving callback number unsuccessful.</string>
    <string name="outgoing_msg_restricted">Messaging has been restricted. No outgoing messages are allowed.</string>
    <string name="downloading_msg_restricted">Messaging has been restricted. Cannot download this message.</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="pref_notification_settings_title">Notification settings</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_summary_notification_enabled">Display message notifications in status</string>
    <string name="pref_title_notification_vibrate">Vibrate</string>
    <string name="pref_summary_notification_vibrate">Also vibrate when notified</string>
    <string name="pref_title_notification_ringtone">Select ringtone</string>
    <string name="pref_msg_signature_title">Message signature</string>
    <string name="summary_signature_preference">Display a signature at the end of every message</string>
    <string name="Edit_signature">Edit signature</string>
    <string name="pref_title_sms_mms_callback_number">Callback number</string>
    <string name="pref_summary_sms_mms_callback_number">Enable/Disable callback number</string>
    <string name="edit_callback_number">Edit callback number</string>
    <string name="enter_callback_number">Enter callback number</string>
    <string name="pref_summary_delete_limit">%1$s messages per conversation</string>
    <string name="pref_title_msg_delete">Message limit</string>
    <string name="pref_general_settings_title">General settings</string>
    <string name="pref_title_restriction_mode">Creation mode restricted</string>
    <string name="pref_summary_restriction_mode">Avoid sending attachments that may not be supported by the receiving device</string>
    <string name="pref_summary_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_title_delivery_reports">Delivery reports</string>
    <string name="pref_title_location_card">Send location cards</string>
    <string name="pref_summary_location_card">Use MMS when inserting a location</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve MMS messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve MMS messages while roaming</string>
    <string name="read_message_contextmenu_openlink">Go To</string>
    <string name="read_message_contextmenu_sharelink">Share link</string>
    <string name="read_message_contextmenu_share_phone">Share phone number</string>
    <string name="read_message_contextmenu_share_email">Share email address</string>
    <string name="read_message_contextmenu_copy">Copy</string>
    <string name="read_message_contextmenu_copy_email">Copy email address</string>
    <string name="read_message_contextmenu_copy_phone_number">Copy phone number</string>
    <string name="read_message_contextmenu_text">Send message</string>
    <string name="read_message_contextmenu_copylink">Copy link</string>
    <string name="read_message_contextmenu_dial_dot">Call</string>
    <string name="read_message_contextmenu_send_mail">Send email</string>
    <string name="read_message_contextmenu_map">Map</string>
    <string name="menu_compose_online">To Online Album</string>
    <string name="message_group_type">Default group message type</string>
    <string name="add_contact_menu_item">Add contact</string>
    <string name="menu_compose">New message</string>
</resources>