<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_search_holo_dark" android:id="@id/action_search" android:title="@string/menu_search" android:showAsAction="ifRoom|collapseActionView" android:actionViewClass="android.widget.SearchView" />
    <item android:icon="@drawable/ic_ab_add" android:id="@id/action_compose_new" android:title="@string/menu_compose" android:showAsAction="ifRoom" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/action_settings" android:title="@string/menu_preferences" />
    <item android:icon="@drawable/ic_menu_to_online_album" android:id="@id/action_compose_online" android:visible="false" android:title="@string/menu_compose_online" />
</menu>